infra/argocd/argocd-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
spec:
  type: LoadBalancer
  loadBalancerIP: 79.174.84.176
  externalTrafficPolicy: Cluster
  ports:
    - name: https
      port: 443
      targetPort: 8080
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
